--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "js-yaml": "^4.1.1",
+    "roslib": "^2.0.1",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
